@@ -1,21 +1,24 @@
 package no.unit.nva.indexingclient;
 
 import static org.mockito.Mockito.mock;
+
 import com.amazonaws.services.lambda.runtime.Context;
-import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
 import no.unit.nva.indexing.testutils.FakeIndexingClient;
 import no.unit.nva.indexingclient.constants.ApplicationConstants;
 import no.unit.nva.indexingclient.models.IndexDocument;
+
 import org.opensearch.action.DocWriteRequest.OpType;
 import org.opensearch.action.bulk.BulkItemResponse;
 import org.opensearch.action.bulk.BulkItemResponse.Failure;
 import org.opensearch.action.bulk.BulkResponse;
 
-public class BatchIndexTest {
+import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+public class BatchIndexTest {
 
     public static final Context CONTEXT = mock(Context.class);
     public static final Random RANDOM = new Random();
@@ -25,21 +28,29 @@ public class BatchIndexTest {
         return new FakeIndexingClient() {
             @Override
             public Stream<BulkResponse> batchInsert(Stream<IndexDocument> indexDocuments) {
-                List<BulkItemResponse> itemResponses = indexDocuments
-                    .map(IndexDocument::getDocumentIdentifier)
-                    .map(id -> createFailure(id))
-                    .map(fail -> new BulkItemResponse(randomNumber(), OpType.UPDATE, fail))
-                    .toList();
+                List<BulkItemResponse> itemResponses =
+                        indexDocuments
+                                .map(IndexDocument::getDocumentIdentifier)
+                                .map(id -> createFailure(id))
+                                .map(
+                                        fail ->
+                                                new BulkItemResponse(
+                                                        randomNumber(), OpType.UPDATE, fail))
+                                .collect(Collectors.toList());
                 BulkResponse response =
-                    new BulkResponse(itemResponses.toArray(BulkItemResponse[]::new), ARBITRARY_QUERY_TIME);
+                        new BulkResponse(
+                                itemResponses.toArray(BulkItemResponse[]::new),
+                                ARBITRARY_QUERY_TIME);
                 return Stream.of(response);
             }
         };
     }
 
     private Failure createFailure(String identifier) {
-        return new Failure(ApplicationConstants.RESOURCES_INDEX,
-                           identifier, new Exception("failingBulkIndexMessage"));
+        return new Failure(
+                ApplicationConstants.RESOURCES_INDEX,
+                identifier,
+                new Exception("failingBulkIndexMessage"));
     }
 
     private int randomNumber() {
