@@ -6,7 +6,9 @@ import static no.unit.nva.indexingclient.IndexingClient.BULK_SIZE;
 import static no.unit.nva.indexingclient.IndexingClient.objectMapper;
 import static no.unit.nva.testutils.RandomDataGenerator.randomJson;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
+
 import static nva.commons.core.attempt.Try.attempt;
+
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsEqual.equalTo;
@@ -23,21 +25,23 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
-import java.io.IOException;
-import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+
 import no.unit.nva.identifiers.SortableIdentifier;
 import no.unit.nva.indexingclient.models.EventConsumptionAttributes;
 import no.unit.nva.indexingclient.models.IndexDocument;
 import no.unit.nva.indexingclient.models.IndicesClientWrapper;
 import no.unit.nva.indexingclient.models.RestHighLevelClientWrapper;
-import no.unit.nva.search.common.records.UsernamePasswordWrapper;
 import no.unit.nva.search.common.jwt.CachedJwtProvider;
+import no.unit.nva.search.common.records.UsernamePasswordWrapper;
+
 import nva.commons.secrets.SecretsReader;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.function.Executable;
 import org.opensearch.action.DocWriteResponse;
 import org.opensearch.action.admin.indices.delete.DeleteIndexRequest;
 import org.opensearch.action.bulk.BulkRequest;
@@ -48,13 +52,17 @@ import org.opensearch.action.index.IndexResponse;
 import org.opensearch.client.IndicesClient;
 import org.opensearch.client.RequestOptions;
 import org.opensearch.client.indices.CreateIndexRequest;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.function.Executable;
+
+import java.io.IOException;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 class IndexingClientTest {
 
-    public static final int SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST = 1256;
+    public static final int
+            SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST = 1256;
     public static final IndexResponse UNUSED_INDEX_RESPONSE = null;
     private RestHighLevelClientWrapper esClient;
     private IndexingClient indexingClient;
@@ -75,7 +83,7 @@ class IndexingClientTest {
         var secretsReaderMock = mock(SecretsReader.class);
         var testCredentials = new UsernamePasswordWrapper("user", "password");
         when(secretsReaderMock.fetchClassSecret(anyString(), eq(UsernamePasswordWrapper.class)))
-            .thenReturn(testCredentials);
+                .thenReturn(testCredentials);
 
         IndexingClient indexingClient = IndexingClient.prepareWithSecretReader(secretsReaderMock);
         assertNotNull(indexingClient);
@@ -84,18 +92,21 @@ class IndexingClientTest {
     @Test
     void shouldIndexAllDocumentsInBatchInBulksOfSpecifiedSize() throws IOException {
         var indexDocuments =
-            IntStream.range(0, SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST)
-                .boxed()
-                .map(i -> randomJson())
-                .map(this::toIndexDocument)
-                .toList();
-        List<BulkResponse> provokeExecution = indexingClient.batchInsert(indexDocuments.stream())
-            .collect(Collectors.toList());
+                IntStream.range(
+                                0,
+                                SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST)
+                        .boxed()
+                        .map(i -> randomJson())
+                        .map(this::toIndexDocument)
+                        .toList();
+        List<BulkResponse> provokeExecution =
+                indexingClient.batchInsert(indexDocuments.stream()).collect(Collectors.toList());
         assertThat(provokeExecution, is(not(nullValue())));
 
-        int expectedNumberOfBulkRequests = (int) Math.ceil(((double) indexDocuments.size()) / ((double) BULK_SIZE));
+        int expectedNumberOfBulkRequests =
+                (int) Math.ceil(((double) indexDocuments.size()) / ((double) BULK_SIZE));
         verify(esClient, times(expectedNumberOfBulkRequests))
-            .bulk(any(BulkRequest.class), any(RequestOptions.class));
+                .bulk(any(BulkRequest.class), any(RequestOptions.class));
     }
 
     @Test
@@ -105,7 +116,8 @@ class IndexingClientTest {
         indexingClient.addDocumentToIndex(indexDocument);
 
         assertThat(submittedIndexRequest.get().index(), is(equalTo(expectedIndex)));
-        assertThat(extractDocumentFromSubmittedIndexRequest(), is(equalTo(indexDocument.resource())));
+        assertThat(
+                extractDocumentFromSubmittedIndexRequest(), is(equalTo(indexDocument.resource())));
     }
 
     @Test
@@ -115,8 +127,8 @@ class IndexingClientTest {
         when(esClient.indices()).thenReturn(indicesClientWrapper);
         indexingClient.createIndex(randomString());
         var expectedNumberOfCreateInvocationsToEs = 1;
-        verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs)).create(any(CreateIndexRequest.class),
-                                                                                   any(RequestOptions.class));
+        verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs))
+                .create(any(CreateIndexRequest.class), any(RequestOptions.class));
     }
 
     @Test
@@ -124,19 +136,20 @@ class IndexingClientTest {
         var expectedErrorMessage = randomString();
         var indicesClientWrapper = createMockIndicesClientWrapper();
         when(esClient.indices()).thenReturn(indicesClientWrapper);
-        when(indicesClientWrapper.create(any(CreateIndexRequest.class), any(RequestOptions.class))).thenThrow(
-            new IOException(expectedErrorMessage));
+        when(indicesClientWrapper.create(any(CreateIndexRequest.class), any(RequestOptions.class)))
+                .thenThrow(new IOException(expectedErrorMessage));
         Executable createIndexAction = () -> indexingClient.createIndex(randomString());
         var actualException = assertThrows(IOException.class, createIndexAction);
         assertThat(actualException.getMessage(), containsString(expectedErrorMessage));
     }
 
     @Test
-    void shouldThrowExceptionContainingTheCauseWhenIndexDocumentFailsToBeIndexed() throws IOException {
+    void shouldThrowExceptionContainingTheCauseWhenIndexDocumentFailsToBeIndexed()
+            throws IOException {
         String expectedMessage = randomString();
         esClient = mock(RestHighLevelClientWrapper.class);
         when(esClient.index(any(IndexRequest.class), any(RequestOptions.class)))
-            .thenThrow(new IOException(expectedMessage));
+                .thenThrow(new IOException(expectedMessage));
 
         indexingClient = new IndexingClient(esClient, cachedJwtProvider);
 
@@ -156,7 +169,8 @@ class IndexingClientTest {
     }
 
     @Test
-    void shouldNotThrowExceptionWhenTryingToDeleteNonExistingDocumentFromImportCandidateIndex() throws IOException {
+    void shouldNotThrowExceptionWhenTryingToDeleteNonExistingDocumentFromImportCandidateIndex()
+            throws IOException {
         RestHighLevelClientWrapper restHighLevelClient = mock(RestHighLevelClientWrapper.class);
         DeleteResponse nothingFoundResponse = mock(DeleteResponse.class);
         when(nothingFoundResponse.getResult()).thenReturn(DocWriteResponse.Result.NOT_FOUND);
@@ -172,8 +186,8 @@ class IndexingClientTest {
         when(esClient.indices()).thenReturn(indicesClientWrapper);
         indexingClient.deleteIndex(randomString());
         var expectedNumberOfCreateInvocationsToEs = 1;
-        verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs)).delete(any(DeleteIndexRequest.class),
-                any(RequestOptions.class));
+        verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs))
+                .delete(any(DeleteIndexRequest.class), any(RequestOptions.class));
     }
 
     private IndicesClientWrapper createMockIndicesClientWrapper() {
@@ -184,17 +198,18 @@ class IndexingClientTest {
     private RestHighLevelClientWrapper setupMockEsClient() throws IOException {
         var esClient = mock(RestHighLevelClientWrapper.class);
         when(esClient.index(any(IndexRequest.class), any(RequestOptions.class)))
-            .thenAnswer(invocation -> {
-                var indexRequest = (IndexRequest) invocation.getArgument(0);
-                submittedIndexRequest.set(indexRequest);
-                return UNUSED_INDEX_RESPONSE;
-            });
+                .thenAnswer(
+                        invocation -> {
+                            var indexRequest = (IndexRequest) invocation.getArgument(0);
+                            submittedIndexRequest.set(indexRequest);
+                            return UNUSED_INDEX_RESPONSE;
+                        });
         return esClient;
     }
 
     private IndexDocument sampleIndexDocument() {
         EventConsumptionAttributes consumptionAttributes =
-            new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
+                new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
         return new IndexDocument(consumptionAttributes, sampleJsonObject());
     }
 
@@ -203,12 +218,14 @@ class IndexingClientTest {
     }
 
     private IndexDocument toIndexDocument(String jsonString) {
-        var consumptionAttributes = new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
+        var consumptionAttributes =
+                new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
         var json = attempt(() -> objectMapper.readTree(jsonString)).orElseThrow();
         return new IndexDocument(consumptionAttributes, json);
     }
 
     private JsonNode extractDocumentFromSubmittedIndexRequest() throws JsonProcessingException {
-        return objectMapper.readTree(submittedIndexRequest.get().source().toBytesRef().utf8ToString());
+        return objectMapper.readTree(
+                submittedIndexRequest.get().source().toBytesRef().utf8ToString());
     }
 }
